--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ client/node_modules/
 
 # production
 /build
+client/build
 
 # misc
 .DS_Store
@@ -19,6 +20,8 @@ client/node_modules/
 .env.test.local
 .env.production.local
 .idea
+.firebaserc
+.firebase
 
 npm-debug.log*
 yarn-debug.log*
