--- a/client/package.json
+++ b/client/package.json
@@ -8,20 +8,24 @@
     "@material-ui/core": "^4.12.3",
     "@mui/icons-material": "^5.2.0",
     "@mui/material": "^5.2.0",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "dotenv": "^8.2.0",
-    "firebase": "^9.6.6",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6",
+    "@testing-library/jest-dom": "^6.2.0",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.2",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.3.1",
+    "firebase": "^10.7.1",
+    "install": "^0.13.0",
+    "node-polyfill-webpack-plugin": "^3.0.0",
+    "os": "^0.1.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "4.0.3",
-    "react-test-renderer": "^17.0.2",
-    "redux": "^4.1.2",
-    "redux-thunk": "^2.4.1",
-    "web-vitals": "^1.0.1"
+    "react-scripts": "5.0.1",
+    "react-test-renderer": "^18.2.0",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
+    "web-vitals": "^3.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,6 +52,9 @@
     ]
   },
   "devDependencies": {
-    "node-sass": "^4.12.0"
+    "node-sass": "^9.0.0"
+  },
+  "browser": {
+    "crypto": false
   }
 }
